Revert "DLS-13060: [SDIL] Fix misalignment in the 'View the details of your return' section on the return-sent page"

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,9 +7,3 @@
     text-align: right !important;
   }
 }
-
-@media print {
-    .govuk-summary-list__row--no-actions::after {
-        display: none !important
-    }
-}
